# sdb

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  toolchain_x64.cmake  vcpkg.json
.github/: pull_request_template.md
.github/workflows/: build.yml
include/libsdb/: sdb_command.h  sdb_libsdb.h  sdb_pipe.h  sdb_process.h  sdb_process_state.h  sdb_stringutil.h
include/libsdb/src/: sdb_process.cpp
scripts/: install_deps.sh
src/: CMakeLists.txt  sdb_command.cpp  sdb_libsdb.cpp  sdb_pipe.cpp  sdb_process.cpp  sdb_process_state.cpp  sdb_stringutil.cpp
test/: CMakeLists.txt  sdb_process.t.cpp  sdb_unit.t.cpp  testbin.m.cpp  tests.cpp
tools/: CMakeLists.txt  sdb.m.cpp
